k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "cake-service"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "cake"
